--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -173,7 +173,7 @@ footer ul li a{
 
 .sous-menu{
 	display: block;
-	background: url('../img/bck2_sous_menu.jpg');
+	background: url('../img/bck_sous_menu.png');
 	width: 100%;
 	height: 500px;
 	background-size: 100% 100%;
@@ -365,8 +365,10 @@ sup{
 	float: left;
 	width: 300px;
 	height: 347px;
-	margin: 0px 15px 20px 0;
+	margin: 0px 15px 20px 0px;
 }
+
+.actu:nth-child(4){margin-top: -25px;}
 
 .type_actu{
 	float: left;
@@ -405,11 +407,16 @@ sup{
 	background: white;
 }
 
+.title_actu{
+	height: 120px;
+}
+
 .title_actu h3{
 	margin-top: 0px;
 	font-size: 18px;
 	color: #406618;
 	text-align: center;
+	vertical-align: middle;
 	padding-top: 10%;
 }
 
@@ -489,6 +496,14 @@ article p{
 	font-size: 16px;
 }
 
+.img_news{
+	width: 960px;
+}
+
+.img_news figcaption{
+	background: none;
+	border: none;
+}
 
 /********************/
 /** PAGE GALERIE PHOTOS **/
